[gd_scene load_steps=13 format=3 uid="uid://7cofox06cmk6"]

[ext_resource type="Script" path="res://src/scenes/guilds/View.gd" id="1_hvsmh"]
[ext_resource type="PackedScene" uid="uid://c8o0sg2n6dbu4" path="res://src/scenes/guilds/Member.tscn" id="1_q0wqy"]
[ext_resource type="FontFile" uid="uid://jx5vc8i6vlpd" path="res://fonts/DungeonFont.ttf" id="2_2ei52"]
[ext_resource type="Texture2D" uid="uid://bffx465c76wek" path="res://art/UI/rects/clouds.png" id="2_hhqvy"]
[ext_resource type="FontFile" uid="uid://dimqo0mn8r0p0" path="res://fonts/Retro Gaming.ttf" id="3_og5qu"]
[ext_resource type="Texture2D" uid="uid://rh1pxwgcldce" path="res://art/UI/rects/720x100.png" id="4_0ocod"]
[ext_resource type="Texture2D" uid="uid://b8eiyfk34naym" path="res://art/button.png" id="7_57sxy"]

[sub_resource type="LabelSettings" id="LabelSettings_gfqi3"]
font = ExtResource("2_2ei52")
font_size = 72
shadow_size = 10
shadow_color = Color(0.266667, 0, 0.278431, 0.603922)
shadow_offset = Vector2(10, 5)

[sub_resource type="LabelSettings" id="LabelSettings_upys1"]
font = ExtResource("2_2ei52")
font_size = 33

[sub_resource type="LabelSettings" id="LabelSettings_q0e1j"]
font = ExtResource("3_og5qu")
font_size = 22

[sub_resource type="LabelSettings" id="LabelSettings_k34c0"]
font = ExtResource("2_2ei52")
font_size = 51

[sub_resource type="LabelSettings" id="LabelSettings_yc7ro"]
font = ExtResource("2_2ei52")
font_size = 66

[node name="View" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_hvsmh")

[node name="TextureRect" type="TextureRect" parent="."]
modulate = Color(0.760784, 1, 0.976471, 1)
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
offset_top = 50.0
offset_right = 720.0
offset_bottom = 150.0
size_flags_horizontal = 4
texture = ExtResource("2_hhqvy")

[node name="Label" type="Label" parent="TextureRect"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 100.0
grow_horizontal = 2
text = "Guild Name"
label_settings = SubResource("LabelSettings_gfqi3")
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureRect" type="TextureRect" parent="TextureRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_0ocod")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
offset_left = 242.0
offset_top = 200.0
offset_right = 478.0
offset_bottom = 366.0
size_flags_horizontal = 4
alignment = 1

[node name="Mem" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer/Mem"]
layout_mode = 2
text = "Members: "
label_settings = SubResource("LabelSettings_upys1")
horizontal_alignment = 1

[node name="Members" type="Label" parent="VBoxContainer/Mem"]
self_modulate = Color(0.815686, 1, 1, 1)
layout_mode = 2
text = "10 / 20"
label_settings = SubResource("LabelSettings_upys1")
horizontal_alignment = 1

[node name="Description" type="Label" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 125)
layout_mode = 2
size_flags_horizontal = 3
text = "Guild Description
ll
L
meow"
label_settings = SubResource("LabelSettings_q0e1j")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="."]
custom_minimum_size = Vector2(520, 400)
layout_mode = 2
offset_left = 46.0
offset_top = 400.0
offset_right = 674.0
offset_bottom = 819.0
size_flags_horizontal = 4
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 6

[node name="Member" parent="ScrollContainer/VBoxContainer" instance=ExtResource("1_q0wqy")]
layout_mode = 2

[node name="Member2" parent="ScrollContainer/VBoxContainer" instance=ExtResource("1_q0wqy")]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="."]
custom_minimum_size = Vector2(720, 150)
layout_mode = 2
offset_top = 850.0
offset_right = 720.0
offset_bottom = 1000.0
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 50
alignment = 1

[node name="Back" type="TextureButton" parent="HBoxContainer"]
modulate = Color(0.65, 0.784167, 1, 0.776471)
custom_minimum_size = Vector2(160, 80)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
texture_normal = ExtResource("7_57sxy")
stretch_mode = 5

[node name="Label2" type="Label" parent="HBoxContainer/Back"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Back"
label_settings = SubResource("LabelSettings_k34c0")
horizontal_alignment = 1
vertical_alignment = 1

[node name="JoinButt" type="TextureButton" parent="HBoxContainer"]
visible = false
custom_minimum_size = Vector2(250, 150)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource("7_57sxy")
stretch_mode = 5

[node name="Label" type="Label" parent="HBoxContainer/JoinButt"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Join"
label_settings = SubResource("LabelSettings_yc7ro")
horizontal_alignment = 1
vertical_alignment = 1

[node name="LeaveButt" type="TextureButton" parent="HBoxContainer"]
custom_minimum_size = Vector2(250, 150)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource("7_57sxy")
stretch_mode = 5

[node name="Label" type="Label" parent="HBoxContainer/LeaveButt"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Leave
"
label_settings = SubResource("LabelSettings_yc7ro")
horizontal_alignment = 1
vertical_alignment = 1

[node name="GetMembers" type="HTTPRequest" parent="."]

[node name="PostJoin" type="HTTPRequest" parent="."]

[node name="DeleteLeave" type="HTTPRequest" parent="."]

[connection signal="pressed" from="HBoxContainer/Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="HBoxContainer/JoinButt" to="." method="_on_join_butt_pressed"]
[connection signal="pressed" from="HBoxContainer/LeaveButt" to="." method="_on_leave_butt_pressed"]
[connection signal="request_completed" from="GetMembers" to="." method="_on_get_members_request_completed"]
[connection signal="request_completed" from="PostJoin" to="." method="_on_post_join_request_completed"]
[connection signal="request_completed" from="DeleteLeave" to="." method="_on_delete_leave_request_completed"]
